# holis_tools

./: README.md  setup.cfg  setup.py
holis_tools/: hicam_to_zarr.py  hicam_utils.py  scratch_4.py  scratch_5.py  spool_reader.py  test.py  test_against_tar.py  test_multiple.py  test_multiple2.py
