[metadata]
name = holis_tools

author = Alan M Watson
author_email = alan.watson@pitt.edu
url = https://github.com/CBI-PITT/holis_tools
license = BSD-3-Clause
description = A python tool set for reading HOLiS data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/CBI-PITT/holis_tools/issues
    Documentation = https://github.com/CBI-PITT/holis_tools#README.md
    Source Code = https://github.com/CBI-PITT/holis_tools
    User Support = https://github.com/CBI-PITT/holis_tools/issues

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    psutil
    numcodecs
	dask
	distributed
	scikit-image
	SimpleITK
	zarr_stores @ git+https://github.com/CBI-PITT/zarr_stores.git
	compression_tools @ git+https://github.com/CBI-PITT/compression_tools.git
	